FIXED THE BUG WITH BROKEN INPUT BOXES!!! WOOOO!!!!
Input boxes were broken for AGES, just needed to fix the position of the
modules and intructions divs. *highfive*

--- a/interactives/trippy-as-arrows/css/style.css
+++ b/interactives/trippy-as-arrows/css/style.css
@@ -80,6 +80,7 @@ div#instructions, div#modules {
   background-color: rgba(255, 255, 255, 0.51);
   border: 2px solid white;
   border-radius: 5px;
+  position: relative;
 }
 
 div#modules {
